chahge class name
cut out style

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="styles/styles.css" />
     <link rel="stylesheet" href="./css/main.min.css" />
     <link
       rel="stylesheet"
@@ -89,7 +88,7 @@
           <h2 class="specialty__title-section visually-hidden">Особливості</h2>
           <ul class="specialty__list list">
             <li class="specialty__item">
-              <div class="specialty__item-container">
+              <div class="specialty__container">
                 <svg class="specialty__icon" width="70" height="70">
                   <use href="./img/icons.svg#icon-antenna"></use>
                 </svg>
